--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install --upgrade ./dist/skyscraper-1.0.1.tar.gz
 # command to run tests
 script:
-  - nosetests tests
+  - nosetests
 notifications:
   email: false
